Placed classes into packages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="service_description">This service handles message transfer between web part and WhatsApp</string>
     <string name="message_service_enabled">Message service enabled</string>
     <string name="message_service_connection">Connection</string>
+    <string name="no_messages_available">No messages</string>
 </resources>
