--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,5 @@
     <string name="service_description">Служба, обеспечивающая передачу сообщений между веб-сервисом и WhatsApp</string>
     <string name="message_service_enabled">Служба сообщений включена</string>
     <string name="message_service_connection">Подключение</string>
+    <string name="no_messages_available">Нет сообщений</string>
 </resources>
